# clockwork-hamlet

./: .coordination.env  .gitignore  AGENTIC_ROADMAP.md  Makefile  README.md  claude.md  docker-compose.yml  pyproject.toml  task_manual.txt  test-results-track-b-user.json  test-results-track-c-chat.json  test-results-track-e-poll.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/hamlet/: __init__.py  config.py  main.py
backend/src/hamlet/actions/: __init__.py  execution.py  types.py  validation.py
backend/src/hamlet/api/: __init__.py  agents.py  auth.py  chat.py  dashboard.py  deps.py  digest.py  events.py  factions.py  goals.py  health.py  life_events.py  llm.py  locations.py  narrative_arcs.py  polls.py  relationships.py  stats.py  stream.py  world.py
backend/src/hamlet/auth/: __init__.py  deps.py  security.py
backend/src/hamlet/db/: __init__.py  connection.py  models.py  seed.py
backend/src/hamlet/factions/: __init__.py  manager.py  types.py
backend/src/hamlet/goals/: __init__.py  generation.py  manager.py  planning.py  types.py
backend/src/hamlet/life_events/: __init__.py  consequences.py  generator.py  types.py
backend/src/hamlet/llm/: __init__.py  agent.py  chat.py  client.py  context.py  parser.py  test_integration.py  usage.py
backend/src/hamlet/memory/: __init__.py  compression.py  context.py  manager.py  significance.py  types.py
backend/src/hamlet/narrative_arcs/: __init__.py  analyzer.py  detector.py  types.py
backend/src/hamlet/schemas/: __init__.py  agent.py  chat.py  event.py  faction.py  goal.py  life_event.py  location.py  memory.py  narrative_arc.py  poll.py  relationship.py  stats.py  user.py  world.py
backend/src/hamlet/simulation/: __init__.py  comedy.py  dramatic.py  engine.py  (+8 more)
backend/tests/: .test-metrics.jsonl  conftest.py  test_actions.py  test_agent_creation.py  test_agent_voting.py  test_api.py  test_api_contracts.py  test_auth.py  test_chat.py  test_comedy.py  test_dashboard.py  test_dialogue_context.py  test_dramatic_events.py  test_emergent_narratives.py  test_events_archive.py  test_events_export.py  test_events_pagination.py  test_goals.py  test_idle_greetings.py  test_integration.py  test_llm_usage.py  test_main.py  test_memory.py  test_performance.py  test_poll_integration.py  test_reactions.py  test_stats.py  test_stream.py
(+124 files in other folders)
